--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
     <application
-        android:label="average_grades"
+        android:label="محاسبه معدل"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
